add ping-credentials endpoint
